Update backtracing between design and analysis for user

--- a/src/main/asciidoc/developer_documentation.adoc
+++ b/src/main/asciidoc/developer_documentation.adoc
@@ -297,6 +297,9 @@ der Mitarbeiterdaten.
 |Order Management |OrderManager
 |Service Category |String
 |OrderTicket |-
+|User |User
+|Staff |Staff
+|- |UserManagement
 |===
 
 == Laufzeitsicht
