--- a/src/main/asciidoc/developer_documentation.adoc
+++ b/src/main/asciidoc/developer_documentation.adoc
@@ -177,33 +177,41 @@ Als Datenbank wird H2 verwendet. Die Persistenz ist standardmäßig deaktiviert.
 |Pfad der externen Klasse 
 |Verwendet von (Klasse der eigenen Anwendung)
 
+|Assert
+|org.springframework.util.Assert
+|CatalogDataInitializer, InventoryInitializer
+
 |BusinessTime 
 |org.{zwsp}salespointframework.{zwsp}time.{zwsp}BusinessTime 
 |ReceivingController, OrderDataInitializer, OrderService
 
 |Catalog 
 |org.{zwsp}salespointframework.{zwsp}catalog.{zwsp}Catalog 
-|OrdersController, ReceivingController, OrderDataInitializer, ServiceDataInitializer
+|OrdersController, ReceivingController, OrderDataInitializer, ServiceDataInitializer, InventoryCatalog
 
 |Component 
 |org.{zwsp}springframework.{zwsp}stereotype.{zwsp}Component 
-|OrderDataInitializer, ServiceDataInitializer
+|OrderDataInitializer, ServiceDataInitializer, InventoryInitializer, CatalogDataInitializer
 
 |Controller 
 |org.{zwsp}springframework.{zwsp}stereotype.{zwsp}Controller 
-|OrdersController, PickUpController, ReceivingController, UserController
+|OrdersController, PickUpController, ReceivingController, UserController, InventoryController, CatalogController 
 
 |DataInitializer 
 |org.{zwsp}salespointframework.{zwsp}core.{zwsp}DataInitializer 
-|OrderDataInitializer, ServiceDataInitializer
+|OrderDataInitializer, ServiceDataInitializer, CatalogDataInitializer, InventoryInitializer
 
 |Errors 
 |org.{zwsp}springframework.{zwsp}validation.{zwsp}Errors 
 |ReceivingController, UserController
 
+|EURO
+|org.salespointframework.core.Currencies.EURO
+|CatalogDataInitializer
+
 |GetMapping 
 |org.{zwsp}springframework.{zwsp}web.{zwsp}bind.{zwsp}annotation.{zwsp}GetMapping 
-|PickUpController, ReceivingController, UserController
+|PickUpController, ReceivingController, UserController, CatalogController
 
 |HttpStatus 
 |org.{zwsp}springframework.{zwsp}http.{zwsp}HttpStatus 
@@ -213,13 +221,17 @@ Als Datenbank wird H2 verwendet. Die Persistenz ist standardmäßig deaktiviert.
 |org.{zwsp}salespointframework.{zwsp}useraccount.{zwsp}web.{zwsp}LoggedIn
 |ReceivingController
 
+|Metric
+|org.salespointframework.quantity.Metric
+|UltimateProduct,CatalogDataInitializer 
+
 |Model 
 |org.{zwsp}springframework.{zwsp}ui.{zwsp}Model 
-|OrdersController, PickUpController, ReceivingController, UserController
+|OrdersController, PickUpController, ReceivingController, UserController, CatalogController
 
 |Money 
 |org.{zwsp}javamoney.{zwsp}moneta.{zwsp}Money 
-|OrderService, ServiceDataInitializer
+|OrderService, ServiceDataInitializer, UltimateProduct, CatalogDataInitializer
 
 |Order 
 |org.{zwsp}salespointframework.{zwsp}order.{zwsp}Order 
@@ -251,7 +263,7 @@ Als Datenbank wird H2 verwendet. Die Persistenz ist standardmäßig deaktiviert.
 
 |Product 
 |org.{zwsp}salespointframework.{zwsp}catalog.{zwsp}Product 
-|Service
+|Service, UltimateProduct
 
 |ProductIdentifier 
 |org.{zwsp}salespointframework.{zwsp}catalog.{zwsp}ProductIdentifier 
@@ -271,7 +283,7 @@ Als Datenbank wird H2 verwendet. Die Persistenz ist standardmäßig deaktiviert.
 
 |Quantity 
 |org.{zwsp}salespointframework.{zwsp}quantity.{zwsp}Quantity 
-|MissMintOrder
+|MissMintOrder, InventoryInitializer
 
 |RequestMapping 
 |org.{zwsp}springframework.{zwsp}web.{zwsp}bind.{zwsp}annotation.{zwsp}RequestMapping 
@@ -284,6 +296,18 @@ Als Datenbank wird H2 verwendet. Die Persistenz ist standardmäßig deaktiviert.
 |Service 
 |org.{zwsp}springframework.{zwsp}stereotype.{zwsp}Service 
 |OrderService, UserManagement
+
+|Sort
+|org.springframework.data.domain.Sort
+|InventoryCatalog
+
+|UniqueInventory
+|org.salespointframework.inventory.UniqueInventory
+|InventoryInitializer
+
+|UniqueInventoryItem
+|org.salespointframework.inventory.UniqueInventoryItem
+|InventoryInitializer, InventoryController, CatalogController
 
 |UserAccount 
 |org.{zwsp}salespointframework.{zwsp}useraccount.{zwsp}UserAccount 
