add testfälle räume template

--- a/src/main/asciidoc/test_plan.adoc
+++ b/src/main/asciidoc/test_plan.adoc
@@ -406,6 +406,18 @@ Das Ticket wird angezeigt.
 
 |===
 
+=== Räume
+[options="headers"]
+|===
+|ID |Anwendungsfall |Vorbedingungen |Eingabe |Ausgabe
+
+|…
+|…
+|…
+|…
+|…
+|===
+
 === etc...
 [options="headers"]
 |===
