--- a/src/main/asciidoc/developer_documentation.adoc
+++ b/src/main/asciidoc/developer_documentation.adoc
@@ -160,7 +160,7 @@ image:srs/models/top-level_architecture.png[Top-Level-Architekur]
 * *Dependency Injection* über die Konstruktoren in Spring-Komponenten
 * *Repository* mit den Spring-Repositories
 
-==== Persistenz
+* Persistenz
 
 Die Anwendung verwendet Hibernate-Annotation-basiertes Mapping,
 um Java-Klassen Datenbanktabellen zuzuordnen.
@@ -168,10 +168,8 @@ Als Datenbank wird H2 verwendet. Die Persistenz ist standardmäßig deaktiviert.
 Um den Persistenzspeicher zu aktivieren, müssen die folgenden zwei Zeilen in der Datei
 application.properties nicht kommentiert werden:
 
-```
 # spring.datasource.url=jdbc:h2:./db/videoshop
 # spring.jpa.hibernate.ddl-auto=update
-```
 
 * Benutzeroberfläche
 
@@ -451,16 +449,49 @@ image::models/design/images/Inventory.png[]
 
 [options="header"]
 |===
-|Klasse/Enumeration (Analysemodell) |Klasse/Enumeration (Entwurfsmodell)
-|Order |Order
-|Service |Service
-|State |OrderState
-|Order Management |OrderManager
-|Service Category |String
-|OrderTicket |-
-|User |User
-|Staff |Staff
-|- |UserManagement
+|Klasse/Enumeration (Analysemodell) 
+|Klasse/Enumeration (Entwurfsmodell)
+
+|Order 
+|Order
+
+|Service
+|Service
+
+|State
+|OrderState
+
+|Order Management
+|OrderManager
+
+|Service Category 
+|String
+
+|OrderTicket
+|-
+|User 
+|User
+
+|Staff 
+|Staff
+
+|- 
+|UserManagement
+
+|Storage
+|Inventory
+
+|Material
+|Inventory
+
+|ResourceManagement
+|-
+
+|Resource
+|UltimateProduct
+
+
+
 |===
 
 == Laufzeitsicht
