--- a/src/main/asciidoc/developer_documentation.adoc
+++ b/src/main/asciidoc/developer_documentation.adoc
@@ -491,6 +491,18 @@ image::models/design/images/Inventory.png[]
 |Resource
 |UltimateProduct
 
+|Room
+|Room
+
+|TimeTable
+|TimeTable Controller
+
+|-
+|Booking
+
+|TimeTableEntry
+|TimeTableEntry
+
 |===
 
 == Laufzeitsicht
